tests/fails/f19.t
if not require("fail") then return end

terra foo()
    return -false
end
foo()
